--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,6 +3,8 @@ FROM php:8.2-fpm
 RUN apt-get update && apt-get install -y \
     zip unzip curl git \
     libpq-dev libzip-dev libonig-dev \
+    nodejs npm \
+    dos2unix \
     && docker-php-ext-install pdo pdo_mysql zip
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
