--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,58 @@
 services:
   app:
+    container_name: app
     build:
       context: ./docker/php
-    container_name: laravel_app
+      dockerfile: Dockerfile
     volumes:
       - ./src:/var/www
+      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+      - ./logs/php:/var/log/php
     networks:
       - laravel
-    entrypoint: ["/usr/local/bin/entrypoint.sh"]
 
   nginx:
-    image: nginx:alpine
-    container_name: laravel_nginx
+    container_name: nginx
+    image: nginx:latest
     ports:
       - "8080:80"
     volumes:
       - ./src:/var/www
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - laravel
+      - ./logs/nginx:/var/log/nginx
     depends_on:
       - app
+    networks:
+      - laravel
 
   mysql:
+    container_name: mysql
     image: mysql:8.0
-    container_name: laravel_mysql
-    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: 'laravel_pass'
+    restart: always
     ports:
-      - "3307:3306"
+      - "3306:3306"
+    volumes:
+      - ./docker/mysql/default.cnf:/etc/mysql/conf.d/default.cnf
+      - ./docker/mysql/data:/var/lib/mysql
+      - ./logs/mysql:/var/log/mysql
+    networks:
+      - laravel
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./docker/redis/data:/data
+      - ./logs/redis:/var/log/redis
+    command: redis-server --appendonly yes
+    restart: always
     networks:
       - laravel
 
