--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     index index.php index.html;
     server_name localhost;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 
     root /var/www/public;
 
@@ -12,11 +14,15 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass laravel_app:9000;
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 300s;
+        fastcgi_send_timeout 300s;
+        fastcgi_connect_timeout 300s;
+        fastcgi_buffering off;
     }
 
     location ~ /\.ht {
